add team & project management modules
