# src/model/teams.js
@@ -1,0 +1,53 @@
+const mongoose = require("mongoose");
+
+const teamSchema = new mongoose.Schema(
+  {
+    teamName: {
+      type: String,
+      required: true,
+      trim: true,
+    },
+    project: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "project",
+    },
+    projectManagers: [
+      {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: "user",
+      },
+    ],
+    teamLeaders: [
+      {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: "user",
+      },
+    ],
+    members: [
+      {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: "user",
+      },
+    ],
+
+    createdBy: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "user",
+      required: true,
+    },
+    isDeleted: {
+      type: Boolean,
+      default: false,
+    },
+
+    deletedAt: {
+      type: Date,
+      default: null,
+    },
+  },
+  {
+    timestamps: true,
+  },
+);
+
+module.exports = mongoose.model("teams", teamSchema);
