# src/validation/projectValidation.js
@@ -1,0 +1,62 @@
+const { Joi } = require("express-validation");
+
+exports.addProjectValidation = {
+  body: Joi.object({
+    projectName: Joi.string().required(),
+    status: Joi.string()
+      .valid("inProgress", "Completed", "OnHold", "Pending", "Terminated")
+      .required(),
+    type: Joi.string().required(),
+    clientName: Joi.string().required(),
+    startDate: Joi.date().required(),
+    endDate: Joi.date().allow(null, ""),
+    techStack: Joi.array().items(Joi.string()).allow(null),
+    description: Joi.string().allow("", null),
+  }),
+};
+
+exports.getProjectValidation = {
+  query: Joi.object({
+    page: Joi.number().integer().min(1).required(),
+    limit: Joi.number().integer().min(1).required(),
+    projectStatus: Joi.string()
+      .valid("inProgress", "Completed", "OnHold", "Pending", "Terminated")
+      .allow("", null),
+    projectType: Joi.string().allow("", null),
+  }),
+};
+
+exports.getProjectByIdValidation = {
+  params: Joi.object({
+    id: Joi.string().hex().length(24).required(),
+  }),
+};
+
+exports.updateProjectValidation = {
+  body: Joi.object({
+    projectName: Joi.string(),
+
+    status: Joi.string().valid(
+      "In Progress",
+      "Completed",
+      "On Hold",
+      "Cancelled",
+    ),
+    type: Joi.string(),
+    clientName: Joi.string(),
+    startDate: Joi.date(),
+    endDate: Joi.date().allow(null, ""),
+    techStack: Joi.array().items(Joi.string()).allow(null),
+    description: Joi.string().allow("", null),
+  }),
+
+  params: Joi.object({
+    id: Joi.string().hex().length(24).required(),
+  }),
+};
+
+exports.deleteProjectValidation = {
+  params: Joi.object({
+    id: Joi.string().hex().length(24).required(),
+  }),
+};
